--- a/tti2sdk/src/main/res/layout/fragment_help_events.xml
+++ b/tti2sdk/src/main/res/layout/fragment_help_events.xml
@@ -4,8 +4,8 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".ui.onboarding.HelpEventsFragment"
-    android:background="@null">
+    android:background="@null"
+    tools:context=".ui.onboarding.HelpEventsFragment">
 
     <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
@@ -18,39 +18,39 @@
             android:layout_marginTop="72dp"
             android:layout_marginBottom="334dp"
             android:background="@drawable/help_events_splash_image"
+            android:contentDescription="@string/img_content_description"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="parent"
-            android:contentDescription="@string/txt_help_titleDescription"/>
+            app:layout_constraintTop_toTopOf="parent"/>
 
         <TextView
             android:id="@+id/helpTitle"
-            app:layout_constraintTop_toTopOf="parent"
-            app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintEnd_toEndOf="parent"
-            android:layout_marginLeft="31dp"
-            android:layout_marginRight="31dp"
-            android:layout_marginTop="365dp"
-            android:layout_marginBottom="265dp"
             android:layout_width="304dp"
             android:layout_height="64dp"
-            android:text="@string/txt_help_titleEvents"/>
+            android:layout_marginLeft="31dp"
+            android:layout_marginTop="365dp"
+            android:layout_marginRight="31dp"
+            android:layout_marginBottom="265dp"
+            android:text="@string/txt_help_titleEvents"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent"/>
 
         <TextView
             android:id="@+id/helpDescription"
-            app:layout_constraintTop_toTopOf="parent"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintBottom_toBottomOf="parent"
-            android:layout_marginLeft="35dp"
-            android:layout_marginRight="35dp"
-            android:layout_marginTop="440dp"
-            android:layout_marginBottom="166dp"
             android:layout_width="290dp"
             android:layout_height="88dp"
-            android:text="@string/txt_help_descriptionEvents"/>
+            android:layout_marginLeft="35dp"
+            android:layout_marginTop="440dp"
+            android:layout_marginRight="35dp"
+            android:layout_marginBottom="166dp"
+            android:text="@string/txt_help_descriptionEvents"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent"/>
 
 
     </androidx.constraintlayout.widget.ConstraintLayout>
